--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "botbuilder": "^3.14.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "express": "^4.13.3",
     "facebook-bot-messenger": "^1.0.7",
@@ -17,7 +19,9 @@
     "node-rest-client": "^3.1.0",
     "nodemon": "^1.14.11",
     "query-string": "^5.1.0",
-    "restify": "^6.3.4"
+    "restify": "^6.3.4",
+    "set-cookie": "0.0.4",
+    "uuid-random": "^1.0.6"
   },
   "engines": {
     "node": "8.9.4"
